[package]
name        = "imdl"
version     = "0.1.1"
description = "📦 A 40' shipping container for the internet"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "CC0-1.0"
readme      = "README.md"
keywords    = ["p2p", "sharing", "bittorrent", "torrent"]
categories  = ["command-line-utilities"]
homepage    = "https://github.com/casey/intermodal"
repository  = "https://github.com/casey/intermodal"
edition     = "2018"
default-run = "imdl"

[dependencies]
ansi_term         = "0.12.0"
atty              = "0.2.0"
chrono            = "0.4.1"
console           = "0.10.0"
globset           = "0.4.0"
lazy_static       = "1.4.0"
libc              = "0.2.0"
log               = "0.4.8"
md5               = "0.7.0"
open              = "1.4.0"
pretty_assertions = "0.6.0"
pretty_env_logger = "0.4.0"
regex             = "1.0.0"
serde-hex         = "0.1.0"
serde_bytes       = "0.11.0"
serde_with        = "1.4.0"
sha1              = "0.6.0"
snafu             = "0.6.0"
static_assertions = "1.0.0"
strum             = "0.18.0"
strum_macros      = "0.18.0"
syn               = "1.0.14"
tempfile          = "3.0.0"
unicode-width     = "0.1.0"
url               = "2.0.0"
walkdir           = "2.1.0"

[dependencies.bendy]
version  = "0.3.0"
features = ["serde"]

[dependencies.indicatif]
version = "0.14.0"
package = "imdl-indicatif"

[dependencies.serde]
version  = "1.0.103"
features = ["derive"]

[dependencies.structopt]
version  = "0.3.0"
features = ["default", "wrap_help"]

[dev-dependencies]
claim    = "0.3.1"
temptree = "0.0.0"

[workspace]
members = [
  # run commands for demo animation
  "bin/demo",
  # generate table of contents and table of supported BEPs in README.md
  "bin/update-readme",
]
