[package]
name = "imdl"
version = "0.1.15"
description = "📦 A 40' shipping container for the internet"
authors.workspace = true
categories = ["command-line-utilities"]
default-run = "imdl"
edition.workspace = true
exclude = ["/book", "/www"]
homepage = "https://github.com/casey/intermodal"
keywords = ["p2p", "sharing", "bittorrent", "torrent"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/casey/intermodal"

[workspace.package]
edition = "2021"
license = "CC0-1.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]

[features]
default = []

[workspace.dependencies]
ansi_term = "0.12.0"
chrono = "0.4.1"
globset = "0.4.0"
libc = "0.2.0"
log = "0.4.8"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
serde = { version = "1.0.103", features = ["derive"] }
snafu = "0.8.9"
structopt = { version = "0.3.0", features = ["default", "wrap_help"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.0.0"
url = { version = "2.1.1", features = ["serde"] }

[dependencies]
ansi_term.workspace = true
atty = "0.2.0"
bendy = { version = "0.3.3", features = ["serde"] }
chrono.workspace = true
console = "0.16.1"
globset.workspace = true
hex = "0.4.2"
ignore = "0.4.14"
indicatif = { version = "0.14.0", package = "imdl-indicatif" }
lazy_static = "1.4.0"
lexiclean = "0.0.1"
libc.workspace = true
log.workspace = true
md5 = "0.8.0"
open = "5.0.1"
percent-encoding = "2.3.2"
pretty_assertions = "1.4.0"
pretty_env_logger.workspace = true
rand = "0.9.2"
rayon = "1.8.0"
regex.workspace = true
serde-hex = "0.1.0"
serde.workspace = true
serde_bytes = "0.11.0"
serde_json = "1.0.57"
serde_with = "3.4.0"
sha1_smol = "1.0.1"
snafu.workspace = true
static_assertions = "1.0.0"
structopt.workspace = true
strum.workspace = true
tempfile.workspace = true
unicode-width = "0.2.2"
url.workspace = true

[dev-dependencies]
criterion = "0.7.0"
temptree = "0.2.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
float_cmp = "allow"
format_collect = "allow"
ignore_without_reason = "allow"
large_enum_variant = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"

[workspace]
members = [
  # generate documentation
  "bin/gen",

  # run commands for demo animation
  "bin/demo",

  # update changelog contributor credits
  "bin/update-contributors",
]

[[bench]]
name = "hasher"
harness = false

# enable release build link time optimization
[profile.release]
lto = true
